# agent-carousel

./: .gitignore  .gitlab-ci.yml  CONTRIBUTING.md  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.sh
.claude/: settings.json
.github/workflows/: generate-carousel.yml  render-carousels.yml  scheduled-publish.yml
aurealis_carousel/: angle_critic.py  angles.py  base.css  claude_cli.py  cli.py  contrast.py  critique.py  css_compile.py  designer.py  font_faces.py  layout_check.py  layout_moves.py  orchestrator.py  orchestrator_v2.py  persist.py  render.py  strategist.py  token_validate.py  writer.py
aurealis_carousel/publish/: base.py
brands/_test/: brand.css  brief.yaml
brands/ethos/: brand.css  brief.yaml
brands/lokin/: brand.css  brief.yaml
cloud-agent/: BRAND.md  CAROUSEL.md  DESIGN.md  INSTRUCTIONS.md  TOPICS.md
docs/: dispatch.md
fonts/: library.yaml
history/: ethos.yaml
playbook/: 01-hooks.md  02-narrative.md  03-conversion.md  04-typography.md  05-layout.md  06-voice.md
scripts/: notify-existing.js  render.js  setup.sh
templates/: slide-shell.html
tests/: conftest.py  test_angle_critic.py  test_angles.py  test_claude_cli.py  test_cli.py  test_contrast.py  test_critique.py  test_css_compile.py  test_designer.py  test_font_faces.py  test_font_library.py  test_layout_check.py  test_layout_moves.py  test_orchestrator.py  test_orchestrator_live.py  test_orchestrator_v2.py  test_persist.py  test_render.py  test_strategist.py  test_token_validate.py  test_writer.py
(+2860 files in other folders)
