[project]
name = "aurealis-carousel"
version = "0.1.0"
description = "Text-first Instagram carousel generator with vision feedback loop."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "playwright>=1.52",
  "pyyaml>=6.0",
  "jinja2>=3.1",
  "Pillow>=10.4",
  "beautifulsoup4>=4.12",
  "cssutils>=2.11",
]

[project.scripts]
aurealis-carousel = "aurealis_carousel.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["aurealis_carousel*"]

[tool.pytest.ini_options]
pythonpath = ["."]
markers = [
  "live: test makes real claude/network calls (opt-in via --run-live)",
]
